--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 
 <html>
   <head>
-    <title>Twitter &hearts; Open Source</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Eric Seidel &mdash; Projects</title>
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu|Vollkorn"
+          type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/breadcrumb.css">
     <link rel="stylesheet" type="text/css" href="assets/grid.css">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>
@@ -13,9 +17,6 @@
 
       // Put custom repo URL's in this object, keyed by repo name.
       var repoUrls = {
-        "bootstrap": "http://twitter.github.com/bootstrap/",
-        "finagle": "http://twitter.github.com/finagle/",
-        "hogan.js": "http://twitter.github.com/hogan.js/"
       };
 
       function repoUrl(repo) {
@@ -24,8 +25,6 @@
 
       // Put custom repo descriptions in this object, keyed by repo name.
       var repoDescriptions = {
-        "bootstrap": "An HTML, CSS, and JS toolkit designed to kickstart development of webapps and sites",
-        "naggati2": "A protocol builder for Netty using Scala 2.8"
       };
 
       function repoDescription(repo) {
@@ -63,7 +62,7 @@
         $item.appendTo("#repos");
       }
 
-      $.getJSON("https://api.github.com/orgs/twitter/repos?callback=?", function (result) {
+      $.getJSON("https://api.github.com/users/gridaphobe/repos?callback=?", function (result) {
         var repos = result.data;
 
         $(function () {
@@ -109,98 +108,8 @@
         });
       });
 
-      $.getJSON("https://api.github.com/orgs/twitter/members?callback=?", function (result) {
-        var members = result.data;
-
-        $(function () {
-          $("#num-members").text(members.length);
-        });
-      });
-
       function randomItem(array) {
         return array[Math.floor(Math.random() * array.length)];
-      }
-
-      var $flyzone;
-
-      function flyzone() {
-        if (!$flyzone) {
-          $flyzone = $("<div>").attr("id", "flyzone").prependTo(document.body);
-        }
-
-        return $flyzone;
-      }
-
-      var sizes = ["smaller", "small", "medium", "large", "fat"];
-
-      var sizeDimensions = {
-        "smaller": 50,
-        "small": 80,
-        "medium": 130,
-        "large": 200,
-        "fat": 300
-      };
-
-      function randomOpacity(threshold) {
-        var opacity = Math.random();
-
-        while (opacity < threshold) {
-          opacity = Math.random();
-        }
-
-        return opacity;
-      }
-
-      function makeLarry(sizeName, speed) {
-        var size = sizeDimensions[sizeName];
-        var top = Math.floor((flyzone().height() - size) * Math.random());
-
-        var $img = $("<img>")
-          .addClass("larry size-" + sizeName)
-          .attr("src", "assets/larry.png")
-          .attr("width", size)
-          .attr("height", size)
-          .css({
-            position: "absolute",
-            opacity: randomOpacity(0.4),
-            top: top,
-            left: -size
-          });
-
-        $img.prependTo(flyzone());
-
-        var left = flyzone().width() + size;
-
-        $img.animate({left: left}, speed, function () {
-          $img.remove();
-          makeRandomLarry();
-        });
-
-        return $img;
-      }
-
-      function makeRandomLarry() {
-        var size = randomItem(sizes);
-        var speed = Math.floor(Math.random() * 20000) + 15000;
-        return makeLarry(size, speed);
-      }
-
-      $(function () {
-        $("#logo").click(function () {
-          makeRandomLarry();
-        });
-      });
-
-      var match = (/\blarry(=(\d+))?\b/i).exec(window.location.search);
-
-      if (match) {
-        var n = parseInt(match[2]) || 20;
-
-        $(function () {
-          for (var i = 0; i < n; ++i) {
-            setTimeout(makeRandomLarry, Math.random() * n * 500);
-          }
-        });
       }
 
     })(jQuery);
@@ -208,31 +117,55 @@
   </head>
   <body>
     <div id="wrapper" class="grid clearfix">
+      <nav>
+        <ul class="breadcrumb">
+          <li>
+            <a href="http://eseidel.org">Home</a>
+            <span class="divider">|</span>
+          </li>
+          <li>
+            <a href="http://eseidel.org/posts">Archive</a>
+            <span class="divider">|</span>
+          </li>
+          <li>
+            <a href="http://gridaphobe.github.com">Projects</a>
+            <span class="divider">|</span>
+          </li>
+          <li>
+            <a href="http://eseidel.org/publications">Publications</a>
+            <span class="divider">|</span>
+          </li>
+          <li>
+            <a href="http://eseidel.org/cv">Resumé</a>
+          </li>
+        </ul>
+      </nav>
       <div id="main" class="grid-1">
-        <div id="logo"><h1>Twitter Open Source</h1></div>
-        <h1>Twitter is built on open source software.</h1>
-        <p>Want to help? <a href="https://twitter.com/jobs">Join the Flock</a></p>
-        <p>Visit <a href="https://dev.twitter.com/">dev.twitter.com</a></p>
-        <p><a href="https://twitter.com/about/resources">Logos and other goodies</a></p>
+        <div id="logo"></div>
+        <h1>Eric Seidel</h1>
+        <p>
+          Starting PhD in CS at UCSD in the fall. Interested in
+          programming languages, data, ubiquitous computing, music,
+          skiing, video games, etc.
+        </p>
       </div>
 
       <div class="grid grid-3">
         <div id="statistics" class="grid-1 alpha header">
           <h1>Statistics</h1>
           <p>
-            <a href="https://github.com/twitter/repositories"><span id="num-repos">&nbsp;</span> public repos</a>
-            <br>
-            <a href="https://github.com/twitter"><span id="num-members">&nbsp;</span> members</a>
+            <a href="https://github.com/gridaphobe/repositories"><span id="num-repos">&nbsp;</span> public repos</a>
           </p>
-          <p class="email"><a href="mailto:opensource@twitter.com">opensource@twitter.com</a></p>
+          <p class="email">
+            This page is based on <a href="http://twitter.github.com">Twitter's GitHub profile</a>.
+          </p>
         </div>
 
         <div id="recently-updated" class="grid-2 omega header">
-          <h1>Recently updated <a href="https://github.com/twitter/repositories">View All on GitHub</a></h1>
+          <h1>Recently updated <a href="https://github.com/gridaphobe/repositories">View All on GitHub</a></h1>
           <ol id="recently-updated-repos"></ol>
         </div>
       </div>
-
       <ol id="repos"></ol>
     </div>
   </body>
