--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div id="logo"></div>
         <h1>Eric Seidel</h1>
         <p>
-          Starting PhD in CS at UCSD in the fall. Interested in
+          PhD student in CS at UCSD. Interested in
           programming languages, data, ubiquitous computing, music,
           skiing, video games, etc.
         </p>
