--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
       <nav>
         <ul class="breadcrumb">
           <li>
-            <a href="http://eseidel.org">Home</a>
+            <a href="http://eric.seidel.io">Home</a>
             <span class="divider">|</span>
           </li>
           <li>
-            <a href="http://eseidel.org/posts">Archive</a>
+            <a href="http://eric.seidel.io/posts">Archive</a>
             <span class="divider">|</span>
           </li>
           <li>
@@ -132,11 +132,11 @@
             <span class="divider">|</span>
           </li>
           <li>
-            <a href="http://eseidel.org/publications">Publications</a>
+            <a href="http://eric.seidel.io/publications">Publications</a>
             <span class="divider">|</span>
           </li>
           <li>
-            <a href="http://eseidel.org/cv">Resumé</a>
+            <a href="http://eric.seidel.io/cv">Resumé</a>
           </li>
         </ul>
       </nav>
