--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <span class="divider">|</span>
           </li>
           <li>
-            <a href="http://eric.seidel.io/cv">Resumé</a>
+            <a href="http://eric.seidel.io/cv.pdf">Resumé</a>
           </li>
         </ul>
       </nav>
